# Distributed-Metrics-Ingestion-Alerting-Service

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/distributed_metrics_ingestion_alerting_service/: __init__.py
src/metrics_service/: main.py
