[project]
name = "distributed-metrics-ingestion-alerting-service"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Fernando Oriundo", email = "150093414+foriundo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
distributed-metrics-ingestion-alerting-service = "distributed_metrics_ingestion_alerting_service:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
